--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
-    <Button
-        android:id="@+id/btn_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_person_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="45dp"
+
         tools:listitem="@layout/item_person"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:src="@drawable/ic_person_add_black_24dp"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
