--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
+    <Button
+        android:id="@+id/btn_open_event"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Event"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="50dp"
         android:id="@+id/rv_person_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
